gccida/g1/ix86_force_to_memory
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_force_to_memory/src/i386.c:12634:28: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  ix86_force_to_memory( machine_mode mode, rtx operand) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_force_to_memory/src/i386.c:12643:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_force_to_memory/src/i386.c:12648:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_force_to_memory/src/i386.c:12660:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 12178, "ix86_force_to_memory"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_force_to_memory/src/i386.c:12664:30: error: use of undeclared identifier 'machine_mode'
v3 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), global_rtl[2], v2); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_force_to_memory/src/i386.c:12696:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 12244, "ix86_force_to_memory"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_force_to_memory/src/i386.c:12701:22: error: use of undeclared identifier 'machine_mode'
v19 = gen_rtx_MEM( ( machine_mode)*( ( unsigned __int8 *)operanda + 2), v18); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_force_to_memory/src/i386.c:12710:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 12204, "ix86_force_to_memory"); 
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_force_to_memory/src/obj/i386.o] Error 1
